--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile "com.android.support:design:$androidSupportVersion"
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
+    compile "com.android.support:transition:$androidSupportVersion"
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile files('libs/volley.jar')
 }
